2008-01-04  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-glitz.c: 
    * src/ccm-window-glitz.c: Use the real geometry of window to create glitz
                              drawable and surface. Set indirect mode with
                              glitz_drawable_format_t

2008-01-03  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-glitz.c:
    * src/ccm-window-glitz.c: Use window visual to determine glitz format

2008-01-02  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-glitz.c: Damage all rectangles of texture
    * src/ccm-window-glitz.c: Remove make_current and get_context not needed

2007-12-30  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * data/cairo-compmgr.schemas.in: fix type of native_pixmap_bind
    * plugins/freeze/ccm-freeze.schemas.in: set default timeout of ping at 5s
    * src/Makefile.am:
    * src/ccm-pixmap-backend.h
    * src/ccm-pixmap-glitz.c
    * src/ccm-pixmap-glitz.h: Add glitz backend for pixmap, this backend needs
                              some patch on glitz to work and specially my 
                              current patch to add TFP support in glitz.

2007-12-30  Nicolas Bruguier  <gandalfn@club-internet.fr>
    * data/cairo-compmgr.schemas.in:
    * src/Makefile.am:
    * src/ccm-pixmap-backend.c:
    * src/ccm-pixmap-backend.h:
    * src/ccm-pixmap-image.c:
    * src/ccm-pixmap-image.h:
    * src/ccm-pixmap-shm.c:
    * src/ccm-pixmap-shm.h:
    * src/ccm-pixmap-xrender.c:
    * src/ccm-pixmap-xrender.h:
    * src/ccm-pixmap.c:
    * src/ccm-pixmap.h:
    * src/ccm-screen.c:
    * src/ccm-screen.h: First implementation of pixmap backends, we can use the
                        native backend associated to window or shm/get_image 
                        backend. For now only xrender native backend with no 
                        damage repair zone a bit slow.

2007-12-27  Nicolas Bruguier  <gandalfn@club-internet.fr>
