@@ -112,8 +112,11 @@ ccm_window_glitz_create_gl_drawable(CCMWindowGlitz* self)
 			g_warning("Error on get glitz format drawable");
 			return FALSE;
 		}
-		
+
+#ifdef ENABLE_GLITZ_TFP_BACKEND
 		format->indirect = _ccm_screen_native_pixmap_bind(screen);
+#endif
+		
 		self->priv->gl_drawable = glitz_glx_create_drawable_for_window(
 											CCM_DISPLAY_XDISPLAY(display),
 											screen->number,
